--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "generate:push": "npx prisma generate npx prisma db push",
     "build": "tsc",
     "start": "node dist/server.js",
     "prisma:generate": "prisma generate",
